# Chatter

./: .gitignore  Chatter API.docx  README.md  zapis.txt
Core/Linux/Chatter/: meson.build  org.gnome.Chatter.json
Core/Linux/Chatter/src/: chatter-window.cpp  chatter-window.h  chatter-window.ui  chatter.gresource.xml  main.cpp  meson.build
Core/Linux/chatter/: chatter.h  chatter.pro  chatter.qrc  defines.h  httpservice.cpp  httpservice.h  logindialog.cpp  logindialog.h  logindialog.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  package-lock.json  package.json  registerwindow.cpp  registerwindow.h  registerwindow.ui
Core/Server/: Endpoint.cs  LoginHeader.cs  PasswordHelper.cs  Program.cs  SCCFG.cs  Server.csproj  Server.sln  SesCon.cs  Startup.cs  ValidatingController.cs  appsettings.json  publish.bat
Core/Server.Test/: UnitTest1.cs
Core/Server/Content/: style.css
Core/Server/Controllers/: ApiDocController.cs  CFileController.cs  HomeController.cs  MessageController.cs  RelationshipController.cs  RoomController.cs  UserController.cs  ValuesController.cs
Core/Server/EndpointData/: cfiles.txt  messages.txt  relationships.txt  rooms.txt  users.txt
Core/Server/MessageClasses/: CFileMessage.cs  ContentCFileMessage.cs  IDMessage.cs  IDRoomMessage.cs  IDSinceMessage.cs  IDUserIDRoomMessage.cs  LikeUser.cs  LoginMessage.cs  MessageMessage.cs  NoLoginUserMessage.cs  RawUUIDMessage.cs  RelMessage.cs  RoomMessage.cs  UUIDMessage.cs  UUIDsMessage.cs  UserMessage.cs
Documentation/: Color Codes.txt  sccfg Standard.txt
(+259 files in other folders)
